apps/wishlist/wishlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist
  namespace: wishlist
spec:
  type: ClusterIP
  selector:
    app: wishlist
  ports:
  - port: 3280
    targetPort: 3280
    protocol: TCP
